--- a/template/navigation.html
+++ b/template/navigation.html
@@ -29,7 +29,7 @@
           >
         </li>
         <li class="nav-item px-2">
-          <a class="nav-link fw-medium" href="../../about.html">About</a>
+          <a class="nav-link fw-medium" href="../about.html">About</a>
         </li>
         <li class="nav-item dropdown px-2">
           <a
@@ -44,12 +44,14 @@
           <ul class="dropdown-menu categories__navbar"></ul>
         </li>
         <li class="nav-item px-2">
-          <a class="nav-link fw-medium" href="../../shop.html">Shop</a>
-        </li>
-        <li class="nav-item px-2">
-          <a class="nav-link fw-medium" href="../../contact.html">Contact</a>
+          <a class="nav-link fw-medium" href="../contact.html">Contact</a>
         </li>
       </ul>
+      <div class="cart">
+        <a href="../cart.html"
+          ><i class="fa-solid fa-cart-plus fa-2x text-danger"></i
+        ></a>
+      </div>
       <!-- =================================== -->
     </div>
   </div>
