--- a/template/navigation.html
+++ b/template/navigation.html
@@ -46,12 +46,20 @@
         <li class="nav-item px-2">
           <a class="nav-link fw-medium" href="../contact.html">Contact</a>
         </li>
+        <li class="nav-item px-2 wish">
+          <a href="../wish.html"
+            ><i class="fa-solid fa-heart fa-2x text-danger"></i></a>
+        </li>
       </ul>
-      <div class="cart">
+      <div class="cart position-relative">
         <a href="../cart.html"
-          ><i class="fa-solid fa-cart-plus fa-2x text-danger"></i
+          ><i class="fa-solid fa-cart-plus fa-2x text-danger"></i>
+          <span
+            id="cartCount"
+            class="badge position-absolute bottom-50 start-50 bg-primary ms-2"
+          ></span
         ></a>
-      </div>
+      
       <!-- =================================== -->
     </div>
   </div>
