--- a/template/navigation.html
+++ b/template/navigation.html
@@ -64,7 +64,7 @@
   </div>
 </nav>
 
-<nav class="navbar fixed-bottom nav__bottomSmallScreen  d-none">
+<nav class="navbar fixed-bottom nav__bottomSmallScreen navbar-expand-lg w-100  d-none">
   <form class="container justify-content-between">
     <!-- ================= -->
     <button class="btn btn-outline-danger border-0 me-md-2 me-0 px-md-2 p-0 position-relative" type="button"><a href="../index.html"
